[rt-postlaunch] Validate websocket connect tokens
Verifies Firebase ID tokens on STOMP CONNECT, binds the verified email as Principal, and switches group-post WS handlers plus presence listeners away from caller-supplied email headers.

Verification: ./mvnw -DskipTests compile passed. ./mvnw test blocked by existing Mockito inline Byte Buddy self-attach failure on JDK 21.